# uulm-utils

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/uulm_utils/: campusonline.py  common.py  coronang.py  grades.py  main.py  sport.py
